src/Domain/Compiler/Tests/Expression/Boolean/BooleanLiteral/__Baselines__/BooleanLiteral_AssignNonBooleanPlaceholder-StashIr.error
error: Type 'bool' is not assignable to type 'u32'.
--> main.hs:7:22
  | 
7 |         var a: u32 = false;
  |                      ^^^^^
